--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -5,6 +5,7 @@
     <title>XX社区</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" >
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/mycss.css">
     <script src="../static/js/jquery-3.3.1.js" type="application/javascript"></script>
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
 
@@ -26,7 +27,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <!--                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
+<!--                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
                 <li><a href="/blog">Link</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -65,41 +66,47 @@
     </div><!-- /.container-fluid -->
 </nav>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-9">
+<!--所有blog 分页 一页10个-->
+<div class="panel panel-default" >
+    <div class="panel-heading">发现</div>
+    <div id="test">
+        <div class="panel-body otherHeadPic">
             <div class="media">
                 <div class="media-left media-middle">
-                    <span id="blog01">
-
-                    </span>
+                    <a href="#">
+                        <img class="media-object" src="..." alt="...">
+                    </a>
                 </div>
                 <div class="media-body">
-                    <span id="blog02">
-
-                    </span>
-
+                    <h4 class="media-heading">Middle aligned media</h4>
+                    <span>浏览量:</span><span>点赞量:</span>
                 </div>
             </div>
         </div>
-        <div class="col-md-3">.col-md-3</div>
     </div>
+    <!--分页-->
+    <nav aria-label="Page navigation">
+        <ul class="pagination" id="eachdata">
+            <li>
+                <a href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li>
+                <a href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </div>
 
+
 </body>
-
-<script>
-    $(document).ready(function () {
-        $.ajax({
-            type:"GET",
-            url:"blog/userBlogs",
-            success:function (resp) {
-                console.log(resp)
-                document.getElementById("blog01").innerHTML=resp[0].blogName;
-            }
-        })
-
-    })
-</script>
-
+<script src="js/blog.js" type="text/javascript"></script>
 </html>
