--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,11 +13,12 @@
     <form th:action="@{/register}" method="post">
         用户名:<input type="text" name="username"><br>
         邮箱:<input type="text" name="email"><br>
-        验证码:<input type="text" name="code"><br>
-        密码:<input type="text" name="password"><br>
+        验证码:<input type="text" name="code">
         <form th:action="@{/sendEmail}">
             <button type="submit">发送验证码</button>
-        </form>
+        </form><br>
+        密码:<input type="text" name="password"><br>
+
         <button type="submit">注册</button>
     </form>
 </body>
