--- a/src/main/resources/templates/userinfo.html
+++ b/src/main/resources/templates/userinfo.html
@@ -3,14 +3,179 @@
 <!--用户信息页面-->
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
+    <meta name="referrer" content="no-referrer">
     <title>XX社区</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" >
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/mycss.css">
     <script src="../static/js/jquery-3.3.1.js" type="application/javascript"></script>
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
 
+    <link href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment-with-locales.js" type="application/javascript"></script>
+    <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js" type="application/javascript"></script>
+
 </head>
 <body>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Brand</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <!--                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
+                <li><a href="/blog">Link</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="搜索问题">
+                </div>
+                <button type="submit" class="btn btn-default">搜索</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li th:if="${session.user==null}"><a href="/tologin">登录</a></li>
+                <li th:if="${session.user!=null}" class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">个人 <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="userinfo">个人资料</a></li>
+                        <li><a href="#">消息中心</a></li>
+                        <li><a href="/issue">发布文案</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="/logout">退出登录</a></li>
+
+                    </ul>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+
+<div class="container-fluid">
+    <!--个人信息-->
+    <div class="panel panel-default">
+        <div class="panel-heading">个人资料</div>
+
+        <!--头像-->
+        <div class="panel-body headpic" id="pic">
+            <h4>头像</h4>
+            <img id="headpic" src="http://localhost:8888/userInfo/img/default.jpg" alt="..." class="img-circle">
+            <button id="choicehead">更换头像</button>
+
+            <form enctype="multipart/form-data">
+                <input id="files" name="files" type="file" style="display: none" />
+                <input id="upload-btn" type="button" value="上传" style="display: none"/>
+                <input id="cancle-upload" type="button" value="取消" style="display: none"/>
+            </form>
+            <progress id="jindu" style="display: none"></progress>
+        </div>
+
+        <div class="panel-body">
+            用户昵称：<input id="username" readonly="readonly">
+        </div>
+        <div class="panel-body">
+            邮箱&nbsp&nbsp：<input id="email" readonly="readonly">
+        </div>
+        <div class="panel-body">
+            手机号&nbsp：<input id="phone" readonly="readonly">
+        </div>
+        <div class="panel-body">
+            个性标签：<input id="info" readonly="readonly">
+        </div>
+        <div class="panel-body">
+            性别&nbsp&nbsp：
+            <span>
+                <div class="btn-group" data-toggle="buttons" id="sex">
+                    <label class="radio-inline">
+                        <input type="radio" name="a" id="sex-men" value="男" disabled="disabled"/>男
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio" name="a" id="sex-women" value="女" disabled="disabled"/>女
+                    </label>
+                </div>
+            </span>
+        </div>
+        <br>
+        <button id="edit">编辑</button>
+        <button id="save">保存</button>
+        <button id="cancle">取消</button>
+    </div>
+
+    <!--我的故事-->
+    <div class="panel panel-default" >
+        <div class="panel-heading">我的故事</div>
+        <div id="test">
+            <div class="panel-body">
+                <div class="media">
+                    <div class="media-left media-middle">
+                        <a href="#">
+                            <img class="media-object" src="..." alt="...">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">Middle aligned media</h4>
+                        <span>浏览量:</span><span>点赞量:</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--分页-->
+        <nav aria-label="Page navigation">
+            <ul class="pagination" id="eachdata">
+                <li>
+                    <a href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li>
+                    <a href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+
+        <!--我点赞过的-->
+        <div class="panel panel-default">
+            <div class="panel-heading">我喜欢的故事</div>
+            <div class="panel-body">
+                Panel content
+            </div>
+        </div>
+
+    </div>
+
+</div>
 
 </body>
+<!--用户信息-->
+<script src="js/userinfo.js" type="text/javascript"></script>
+
+
 </html>
