--- a/src/main/resources/templates/userinfo.html
+++ b/src/main/resources/templates/userinfo.html
@@ -164,13 +164,45 @@
         <!--我点赞过的-->
         <div class="panel panel-default">
             <div class="panel-heading">我喜欢的故事</div>
-            <div class="panel-body">
-                Panel content
+            <div id="myLiked">
+                <div class="panel-body">
+                    <div class="media">
+                        <div class="media-left media-middle">
+                            <a href="#">
+                                <img class="media-object" src="..." alt="...">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">Middle aligned media</h4>
+                            <span>浏览量:</span><span>点赞量:</span>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <!--分页-->
+            <nav aria-label="Page navigation">
+                <ul class="pagination" id="eachdataLiked">
+                    <li>
+                        <a href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li>
+                        <a href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
 
     </div>
-
+<button id="test01" onclick="getLiked()">test</button>
 </div>
 
 </body>
