添加了更新浏览量的定时任务

--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -1,20 +1,71 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<!--发布页面-->
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-    <title>XX社区</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" >
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <title>故事汇</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/mycss.css">
     <script src="../static/js/jquery-3.3.1.js" type="application/javascript"></script>
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
 
 </head>
 <body>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="http://localhost:8888/">首页</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <!--                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
+                <li><a href="/blog">故事圈</a></li>
+
+            </ul>
+            <form class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="">
+                </div>
+                <button type="submit" class="btn btn-default">搜索</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li th:if="${session.user==null}"><a href="/tologin">登录</a></li>
+                <li th:if="${session.user!=null}" class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">个人 <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="userinfo">个人资料</a></li>
+                        <li><a href="#">消息中心</a></li>
+                        <li><a href="/issue">发布文案</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="/logout">退出登录</a></li>
+
+                    </ul>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
 
     标题: <input id="blogName" type="text" name="blogName" value="请输入">
     内容: <input id="content" type="text" name="content" value="请输入">
     <button id="submit" type="submit">发布</button>
+
+
+
+
+
+
+
+
 
     <script>
 
