--- a/src/main/resources/templates/blogInfo.html
+++ b/src/main/resources/templates/blogInfo.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-    <title>XX社区</title>
+    <title>故事汇</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css" >
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/mycss.css">
-    <script src="/js/jquery-3.3.1.js" type="application/javascript"></script>
+    <script src="../static/js/jquery-3.3.1.js" type="application/javascript"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
 
 </head>
@@ -21,30 +21,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="http://localhost:8888/">首页</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <!--                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
-                <li><a href="/blog">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
+                <li><a href="/blog">故事圈</a></li>
+
             </ul>
             <form class="navbar-form navbar-left">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="搜索问题">
+                    <input type="text" class="form-control" placeholder="">
                 </div>
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
@@ -53,7 +42,7 @@
                 <li th:if="${session.user!=null}" class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">个人 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/userinfo">个人资料</a></li>
+                        <li><a href="userinfo">个人资料</a></li>
                         <li><a href="#">消息中心</a></li>
                         <li><a href="/issue">发布文案</a></li>
                         <li role="separator" class="divider"></li>
@@ -65,7 +54,6 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-
     <!--blog详细信息-->
     <div class="panel panel-default">
         <div class="panel-heading">
