--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,22 +29,11 @@
             <ul class="nav navbar-nav">
                 <!--                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
                 <li><a href="/blog">故事圈</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
+
             </ul>
             <form class="navbar-form navbar-left">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="搜索问题">
+                    <input type="text" class="form-control" placeholder="">
                 </div>
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
