--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,21 +1,31 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE HTML>
+<html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-    <title>登录</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" >
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <title>登录界面</title>
+    <meta charset="utf-8">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="cache-control" content="no-cache">
+    <meta http-equiv="expires" content="0">
+    <meta http-equiv="keywords" content="keyword1,keyword2,keyword3">
+    <meta http-equiv="description" content="This is my page">
+    <link rel="stylesheet" type="text/css" href="/loginTem/css/css.css" />
 
 </head>
 <body>
-    登录<br>
-    <form th:action="@{/userLogin}" method="post">
-        邮箱:<input type="text" name="text"><br>
-        密码:<input type="text" name="password"><br>
-        <input type="submit" value="登录">
-    </form>
+<form name="form1" action="/userLogin" method="post">
+    <h1>欢迎来到故事汇</h1>
+    <input class=input_1 id=username size=15  name="text"  placeholder=邮箱><br />
+    <input class=input_1 id=password type=text size=15 name="password" placeholder=密码><br />
+
     <br>
-    <a th:href="@{/toregister}">注册</a>
+    <br>
+
+    <input class=input_3 type="submit" value="登录" />
+    <input class=input_3 type="button"  onclick=document.form1.reset() value="重置" />
+    <br>
+    <br>
+    <a href="/toregister">还没有账号，点击注册</a>
+</form>
+<script type="text/javascript" src="/loginTem/js/script.js"></script>
 </body>
 </html>
