--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,25 +1,41 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE HTML>
+<html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-    <title>登录</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" >
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <title>登录界面</title>
+    <meta charset="utf-8">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="cache-control" content="no-cache">
+    <meta http-equiv="expires" content="0">
+    <meta http-equiv="keywords" content="keyword1,keyword2,keyword3">
+    <meta http-equiv="description" content="This is my page">
+    <link rel="stylesheet" type="text/css" href="/loginTem/css/css.css" />
 
 </head>
 <body>
-    注册<br>
-    <form th:action="@{/register}" method="post">
-        用户名:<input type="text" name="username"><br>
-        邮箱:<input type="text" name="email"><br>
-        验证码:<input type="text" name="code">
-        <form th:action="@{/sendEmail}">
-            <button type="submit">发送验证码</button>
-        </form><br>
-        密码:<input type="text" name="password"><br>
+<form name="form1" action="/register" method="post">
+    <h1>注册</h1>
+<!--    <input class=input_1 id=username size=15  name="text"  placeholder=邮箱><br />-->
+<!--    <input class=input_1 id=password type=text size=15 name="password" placeholder=密码><br />-->
+<!--    <br>-->
+<!--    <br>-->
+<!--    <input class=input_3 type="submit" value="登录" />-->
+<!--    <input class=input_3 type="button"  onclick=document.form1.reset() value="重置" />-->
 
-        <button type="submit">注册</button>
-    </form>
+    用户名:<input class=input_1 type="text" name="username"><br>
+    邮箱:<input class=input_1 type="text" name="email"><br>
+    验证码:<input class=input_1 type="text" name="code"><br>
+    密码:<input class=input_1 type="text" name="password"><br>
+    <br>
+    <input class=input_3 type="submit" value="注册" />
+    <form action="sendEmail">
+        <input class=input_3 type="submit" value="发送验证码" />
+    </form><br>
+
+
+
+
+</form>
+
+<script type="text/javascript" src="/loginTem/js/script.js"></script>
 </body>
 </html>
